adding apps list

--- a/src/main/webapp/views/account.html
+++ b/src/main/webapp/views/account.html
@@ -318,7 +318,23 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Contacts</td>
+                                <td>Calendar</td>
+                                <td>
+                                    <button class="btn btn-success">Launch</button>
+                                    <button class="btn btn-warning">Abort</button>
+                                    <button class="btn btn-danger">Terminate</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Calculator</td>
+                                <td>
+                                    <button class="btn btn-success">Launch</button>
+                                    <button class="btn btn-warning">Abort</button>
+                                    <button class="btn btn-danger">Terminate</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Music</td>
                                 <td>
                                     <button class="btn btn-success">Launch</button>
                                     <button class="btn btn-warning">Abort</button>
@@ -333,7 +349,15 @@
                                     <button class="btn btn-danger">Terminate</button>
                                 </td>
                             </tr><tr>
-                                <td>Settings</td>
+                                <td>Sound Recorder</td>
+                                <td>
+                                    <button class="btn btn-success">Launch</button>
+                                    <button class="btn btn-warning">Abort</button>
+                                    <button class="btn btn-danger">Terminate</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Camera</td>
                                 <td>
                                     <button class="btn btn-success">Launch</button>
                                     <button class="btn btn-warning">Abort</button>
