--- a/src/main/webapp/views/account.html
+++ b/src/main/webapp/views/account.html
@@ -299,7 +299,7 @@
                 </td>
                 <td>
                     <button class="btn btn-primary" id="{{request.deviceId}}" data-toggle="modal"
-                            data-target="#deviceActionModal">
+                            data-target="#deviceActionModal" ng-click="deviceAppAction(request.deviceId)">
                         App Actions
                     </button>
                 </td>
@@ -318,48 +318,64 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Calendar</td>
+                                <td class="appName">Calendar</td>
                                 <td>
-                                    <button class="btn btn-success">Launch</button>
+                                    <button class="btn btn-success launch" ng-click="launchApp('Calendar')">Launch</button>
                                     <button class="btn btn-warning">Abort</button>
                                     <button class="btn btn-danger">Terminate</button>
                                 </td>
                             </tr>
                             <tr>
-                                <td>Calculator</td>
+                                <td class="appName">Calculator</td>
                                 <td>
-                                    <button class="btn btn-success">Launch</button>
+                                    <button class="btn btn-success launch" ng-click="launchApp('Calculator')">Launch</button>
                                     <button class="btn btn-warning">Abort</button>
                                     <button class="btn btn-danger">Terminate</button>
                                 </td>
                             </tr>
                             <tr>
-                                <td>Music</td>
+                                <td class="appName">Music</td>
                                 <td>
-                                    <button class="btn btn-success">Launch</button>
+                                    <button class="btn btn-success launch" ng-click="launchApp('Music')">Launch</button>
                                     <button class="btn btn-warning">Abort</button>
                                     <button class="btn btn-danger">Terminate</button>
                                 </td>
                             </tr>
                             <tr>
-                                <td>Gallery</td>
+                                <td class="appName">Gallery</td>
                                 <td>
-                                    <button class="btn btn-success">Launch</button>
+                                    <button class="btn btn-success launch" ng-click="launchApp('Gallery')">Launch</button>
                                     <button class="btn btn-warning">Abort</button>
                                     <button class="btn btn-danger">Terminate</button>
                                 </td>
                             </tr><tr>
-                                <td>Sound Recorder</td>
+                                <td class="appName">Speech Recorder</td>
                                 <td>
-                                    <button class="btn btn-success">Launch</button>
+                                    <button class="btn btn-success launch" ng-click="launchApp('SpeechRecorder')">Launch</button>
                                     <button class="btn btn-warning">Abort</button>
                                     <button class="btn btn-danger">Terminate</button>
                                 </td>
                             </tr>
                             <tr>
-                                <td>Camera</td>
+                                <td class="appName">Quick Search Box</td>
                                 <td>
-                                    <button class="btn btn-success">Launch</button>
+                                    <button class="btn btn-success launch" ng-click="launchApp('QuickSearchBox')">Launch</button>
+                                    <button class="btn btn-warning">Abort</button>
+                                    <button class="btn btn-danger">Terminate</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="appName">Browser</td>
+                                <td>
+                                    <button class="btn btn-success launch" ng-click="launchApp('Browser')">Launch</button>
+                                    <button class="btn btn-warning">Abort</button>
+                                    <button class="btn btn-danger">Terminate</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="appName">Camera</td>
+                                <td>
+                                    <button class="btn btn-success launch" ng-click="launchApp('Camera')">Launch</button>
                                     <button class="btn btn-warning">Abort</button>
                                     <button class="btn btn-danger">Terminate</button>
                                 </td>
