--- a/src/main/webapp/styles/bootstrap.css
+++ b/src/main/webapp/styles/bootstrap.css
@@ -726,7 +726,7 @@ pre code {
     margin-right: auto;
     margin-left: auto;
     padding-left: 15px;
-    padding-right: 15px
+    padding-right: 15px;
 }
 
 @media (min-width: 768px) {
@@ -4037,7 +4037,8 @@ textarea.input-group-sm > .form-control, textarea.input-group-sm > .input-group-
     padding: 15px;
     font-size: 18px;
     line-height: 20px;
-    height: 50px
+    height: 50px;
+    margin-top: -5px;
 }
 
 .navbar-brand:hover, .navbar-brand:focus {
