--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -263,3 +263,37 @@ ul#strength {
 .tagline{
     font-size: small;
 }
+
+.devDetailsWrapper {
+}
+
+.devWrapper{
+    height: 370px;
+}
+
+.devImage {
+    float: left;
+    border-radius: 10px;
+    border: 1px solid #e3e3e3;
+    margin-bottom: 20px;
+    margin-right: 50px;
+}
+
+.devInfo {
+    float: left;
+}
+
+.devDetailsStatus{
+    float: left;
+    margin-top: 5px;
+    margin-right: 7px;
+}
+
+.statLabel{
+    float: left;
+    margin-right: 15px;
+}
+
+.installedApps {
+    margin-bottom: 15px;
+}
